fixes position of nav menu on mobile

--- a/theme/assets/css/main.scss
+++ b/theme/assets/css/main.scss
@@ -553,7 +553,7 @@ html {
     z-index: 10;
     position: relative;
     height: $nav-height-mobile;
-
+    margin-bottom: 0;
     display: flex;
     padding: 0;
     padding-left: $padding-card;
